add tests, upd examples